--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8-jdk-alpine
 VOLUME /tmp
-ARG JAR_FILE
-COPY ${JAR_FILE} gs-spring-boot-docker-0.1.0.jar
-ENTRYPOINT ["java","-jar","gs-spring-boot-docker-0.1.0.jar"]
+ADD target/gs-spring-boot-docker-0.1.0.jar target/app.jar
+RUN bash -c 'touch target/app.jar'
+ENTRYPOINT ["java","-jar","-Dspring.profiles.active=local","target/app.jar"]
