--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8-jdk-alpine
 VOLUME /tmp
-COPY target/*.jar app.jar
+COPY target/gs-spring-boot-docker-0.1.0.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
