--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,5 +1,4 @@
 FROM openjdk:8-jdk-alpine
 VOLUME /tmp
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","${JAVA_OPTS}","-jar","/app.jar"]
+COPY gs-spring-boot-docker-0.1.0.jar gs-spring-boot-docker-0.1.0.jar
+ENTRYPOINT ["java","-jar","/gs-spring-boot-docker-0.1.0.jar"]
