--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.springframework</groupId>
-    <artifactId>gs-spring-boot-docker</artifactId>
-    <version>0.1.0</version>
+    <artifactId>parkit</artifactId>
+    <version>1</version>
     <packaging>jar</packaging>
     <name>Spring Boot Docker</name>
     <description>Getting started with Spring Boot and Docker</description>
@@ -18,7 +18,7 @@
     </parent>
 
     <properties>
-        <docker.image.prefix>park</docker.image.prefix>
+        <docker.image.prefix>ws</docker.image.prefix>
         <java.version>1.8</java.version>
         
     </properties>
