--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8-jdk-alpine
 VOLUME /tmp
-COPY gs-spring-boot-docker-0.1.0.jar gs-spring-boot-docker-0.1.0.jar
-ENTRYPOINT ["java","-jar","/gs-spring-boot-docker-0.1.0.jar"]
+COPY parkit-1.jar parkit-1.jar
+ENTRYPOINT ["java","-jar","/parkit-1.jar"]
